Testing hover fix on mobile.

--- a/style.css
+++ b/style.css
@@ -92,6 +92,14 @@ button:hover{
   color: yellow;
   transform: scale(104%) ;
 }
+@media (hover: none){
+  button{
+    box-shadow: 0;
+    transform: scale(100%) ;
+    color:gold;
+  }
+}
+
 #btonNewGame{
   color:white;
 }
